--- a/client/index.jade
+++ b/client/index.jade
@@ -3,8 +3,19 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Memory
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
     link(rel='stylesheet', href='/style.css')
   body
-
+    .container
+      .row
+        #title
+          h1 Memory
+          button#start Start
+    .container#gamecontainer
+      
     script(src='/vendor/jquery/dist/jquery.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
+
+    script(src='/vendor/lodash/lodash.js')
     script(src='/main.js')
+    script(src='/models/tile.js')
