--- a/client/style.less
+++ b/client/style.less
@@ -1,3 +1,66 @@
-h1{
-  color :red;
+body {
+  background-color: #222222;
+}
+
+.square {
+  display: inline-block;
+  height: 155px;
+  width: 155px;
+  border: 1px solid white;
+}
+
+#title {
+  text-align: center;
+  h1 {
+    color: white;
+  }
+}
+
+#gamecontainer {
+  padding-top: 20px;
+  text-align: center;
+}
+
+
+/* entire container, keeps perspective */
+.flip-container {
+  perspective: 1000;
+}
+  /* flip the pane when hovered */
+  .flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+  }
+
+.flip-container, .front, .back {
+  width: 155px;
+  height: 155px;
+}
+
+/* flip speed goes here */
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+
+  position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+  backface-visibility: hidden;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+  z-index: 2;
+  /* for firefox 31 */
+  transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+  transform: rotateY(180deg);
 }
