--- a/client/index.jade
+++ b/client/index.jade
@@ -9,10 +9,10 @@ html(lang='en')
     .container
       .row
         .title
-          h1 Memory
+          h1 MemoryJS
           button#start Start Timer
         .title
-          span#timer
+          span#timer 0
 
     .container#gamecontainer
       
