--- a/client/style.less
+++ b/client/style.less
@@ -14,6 +14,11 @@ body {
   font-size:20px;
 }
 
+.row label, select {
+  text-align: center;
+  color: white;
+}
+
 .title {
   text-align: center;
   h1, span {
